# syslab-deploy

./: .gitignore  README.md  README.zh_CN.md  STEP.zh_CN.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/syslab_deploy/: MainActivity.kt
julia/: compile.sh
lib/: main.dart  obs.dart  pages.dart
lib/messages/: all.dart  basic.pb.dart  basic.pbjson.dart  generated.dart
native/hub/: Cargo.toml
native/hub/src/: sample_functions.rs
native/hub/src/messages/: basic.rs  generated.rs  mod.rs
native/syslabcc_lib/: Cargo.toml  build.rs
native/syslabcc_lib/src/: lib.rs
native/syslabcc_lib/syslabcc_lib/: CMakeLists.txt  Makefile  juliacmake.jl  make.jl  out.cpp  out.h
native/syslabcc_lib/syslabcc_lib/cmakeconfig/: build.cmd  build.sh  toolconfig.cmake
native/syslabcc_lib/syslabcc_lib/syslabcrt-intrinsics/syslabcrt-intrinsics/: intrinsics_core.hpp
native/syslabcc_lib/syslabcc_lib/syslabcrt-intrinsics/syslabcrt-intrinsics/declarations/: compat.hpp  compat_128bit.hpp  int128.hpp  mod.hpp  syscompat.hpp
native/syslabcc_lib/syslabcc_lib/syslabcrt-intrinsics/syslabcrt-intrinsics/declarations/intrinsics/: errors.hpp  others.hpp  sjthread.hpp
native/syslabcc_lib/syslabcc_lib/syslabcrt-intrinsics/syslabcrt-intrinsics/declarations/mechanisms/: gc.hpp  objects.hpp  stableptr.hpp  thread_pool.hpp
native/syslabcc_lib/syslabcc_lib/syslabcrt-intrinsics/syslabcrt-intrinsics/definitions/: mod-pre.hpp  mod.hpp
native/syslabcc_lib/syslabcc_lib/syslabcrt-intrinsics/syslabcrt-intrinsics/definitions/intrinsics/: base.hpp  bitwise.hpp  errors.hpp  finalizer.hpp  io.hpp  others.hpp  sjthread.hpp
native/syslabcc_lib/syslabcc_lib/syslabcrt-intrinsics/syslabcrt-intrinsics/definitions/mechanisms/: ffi.hpp  gc.hpp  objects.hpp  sjsymbol.hpp  thread_pool.hpp
native/syslabcc_lib/syslabcc_lib/syslabcrt-intrinsics/syslabcrt-intrinsics/utils/: misc.hpp  pathlib.hpp
native/syslabcc_lib/syslabcc_lib/syslabcrt-io/include/: platform.h
native/syslabcc_lib/syslabcc_lib/syslabcrt-io/src/: ios.c  utils.c
native/syslabcc_lib/syslabcc_lib/syslabcrt-io/src/utf8proc/: utf8proc.c
native/syslabcc_lib/win-io-patches/ghc/: filesystem.hpp
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
